fixed view on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,16 @@
 }
 
 @media (max-width: 992px){
+	.flex-container{
+		display: flex !important;
+		margin-left: auto;
+		margin-right: auto;
+		align-items: center !important;
+	}
 	.phone{
-		display: none;
+		margin-top: 50px;
+		justify-content: center;
+		height: 500px;
+		width: 500px;
 	}
 }
